--- a/app/templates/users/-form.hbs
+++ b/app/templates/users/-form.hbs
@@ -13,8 +13,13 @@
     <label> Email:
       {{input value=model.email}}
     </label>
+ </p>
+ <p>
+    <label> Password:
+      {{input value=model.password}}
+    </label>
+ </p>
 
-  </p>
   <input type="submit" value="save"/>
   <button {{action "cancel"}}> Cancel</button>
 </form>
