--- a/app/templates/users/show.hbs
+++ b/app/templates/users/show.hbs
@@ -1,5 +1,7 @@
 <ul>
-<li>First Name: {{model.firstName}}</li> <li>Last Name: {{model.lastName}}</li> <li>Email: {{model.email}}</li> <li>twitter: {{model.twitter}}</li>
+  <li>First Name: {{user.firstName}}</li>
+  <li>Last Name: {{user.lastName}}</li>
+  <li>Email: {{user.email}}</li>
+  <li>{{link-to "Edit info" "users.edit" model}}</li>
 </ul>
 
-{{outlet}}
